# panoptes-pipeline

./: .coveragerc  .dockerignore  .gcloudignore  .gitignore  .travis.yml  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  Dockerfile  LICENSE  LICENSE.txt  README.md  combine_lightcurves.py  combiner-service.yaml  combiner.yaml  conf.yaml  deploy.sh  docker-compose.yaml  environment.yaml  generate_PSC.py  generate_data_network.py  generate_network.py  requirements.txt  setup.cfg  setup.py
data/LC/PIC_J0326137+295015/PAN000/424298/: 2016-07-24T10:41:10.772000.json
data/LC/PIC_J0326137+295015/PAN001/903921/: 2016-07-27T15:42:47.494000.json
data/LC/PIC_J0326137+295015/PAN003/541482/: 2016-07-28T06:39:13.650000.json
data/LC/PIC_J1632291+190441/PAN000/424298/: 2016-07-28T01:44:48.332000.json
data/LC/PIC_J1632291+190441/PAN000/788978/: 2016-07-25T02:40:23.915000.json  2016-07-26T04:21:04.170000.json
data/LC/PIC_J1632291+190441/PAN001/903921/: 2016-07-27T03:39:59.013000.json
data/LC/PIC_J18365633+3847012/PAN000/424298/: 2016-07-24T05:03:35.493000.json
docker/: Dockerfile  cloudbuild.yaml  docker-compose.yaml  environment.yaml
docker/gcp-notebook/: Dockerfile
docs/: Makefile  conf.py  index.rst
examples/: How to Get PANOPTES Data.ipynb  Observation Notebook.ipynb  Observations - Finding the data you want.ipynb  Target - Find Similar Stars.ipynb  sql_bigquery_examples.ipynb
examples/notebooks/: 0001.fits  Algorithm.ipynb  AlgorithmDescription.ipynb  Background Subtraction Method.ipynb  Background-Subtraction-Method.ipynb  Drift-Align-Test.ipynb  Exoplanet Info.ipynb  Flat-fields.ipynb  FlatFrameAndGain.ipynb  GainCalculation-Simple.ipynb  GainCalculation.ipynb  MakePretty.ipynb  Observation-Processing.ipynb  PIAA-Algorithm-Scratch.ipynb  PIAA-Algorithm-Slim.ipynb  PIAA-Algorithm.ipynb  PSC & Lightcurves.ipynb  PipelineAnalyzePSC.ipynb  PipelineSingleObservation.ipynb  ProcessTargetExample.ipynb  RRC Algorithm.ipynb  RRC In Action.ipynb  Sky Background Calculations.ipynb  Sky Background.ipynb  Sky-Background-Calculations.ipynb  Superpixel Image.ipynb  Superpixels-And-Stamps.ipynb  Tracking-Error-Demonstration.ipynb  Untitled.ipynb  matplotlibrc
notebooks/: PSC & Lightcurves.ipynb  ProcessFITS.ipynb  ProcessObservation.ipynb  README.md  tabby.fits  wasp33.fits
notebooks/assets/: Observing-Run-Stats-and-FOV-Plot.ipynb  RMS-explore.ipynb  Superpixels-And-Stamps.ipynb  detector-properties.text  rms_explore.ipynb  target_coverage.tex
notebooks/camera/: Flat-Frame-And-Gain.ipynb  FlatFrameAndGain.ipynb
notebooks/mount/: Tracking-Error-Demonstration.ipynb
notebooks/observing/: Exoplanet Info.ipynb  Exoplanet-Info.ipynb  TESS Observability.ipynb  TESS-Observability.ipynb
notebooks/processing/: Algorithm.ipynb  Examine-Target.ipynb  PIAA-01-Source-Detection-And-Filtering.ipynb  PIAA-03-Find-Similar-Stars.ipynb  PIAA-05-Explore-Lightcurve.ipynb  PIAA-Build-Reference-PSC.ipynb  PIAA-Diff-Photometry.ipynb  PIAA-Estimate-Noise.ipynb  PIAA-Examine-Target-2.ipynb  PIAA-Examine-Target-Estimate-Noise.ipynb  PIAA-Examine-Target-Noise.ipynb  PIAA-Examine-Target.ipynb  PIAA-Explore-Lightcurve.ipynb  PIAA-Find-Similar-Stars.ipynb  PIAA-PSC-Creation.ipynb  PIAA-Source-Detection-And-Filtering.ipynb  PIAA-Source-Noise.ipynb  PIAA-Target-Noise.ipynb  Sky-Background-Calculations.ipynb  Source-Detection-And-Filtering.ipynb
panoptes/piaa/: pipeline.py  version.py
panoptes/piaa/tests/: conftest.py  test_helpers.py  test_pipeline.py
panoptes/piaa/utils/: exoplanets.py  helpers.py  images.py  noise.py  pipeline.py  plot.py  sources.py
panoptes/pipeline/: processing.py
panoptes/pipeline/utils/: polar_alignment.py
piaa/: exoplanets.py  observation.py  pipeline.py  utils.py
piaa/tests/: conftest.py  test_exoplanets.py
piaa/utils/: Untitled.ipynb  __init__.py  exoplanets.py  helpers.py  images.py  noise.py  pipeline.py  plot.py  polar_alignment.py  postgres.py  sources.py
resources/: observations.matched_sources-schema.json  planets.csv  psc_bq_schema.json
resources/conf_files/sextractor/: panoptes.param  panoptes.sex
resources/source-extractor/: panoptes.conf  panoptes.param
scripts/: PIAA-Build-Reference-PSC-Parallel.py  PIAA-Build-Reference-PSC.py  PIAA-Find-Similar-Stars.py  PIAA-PSC-Creation.py  append_lightcurve.py  build_containers.sh  combine_lightcurves.py  compute_variance.py  connect_cloud_sql_proxy.py  create_references.py  create_stamps_for_observation.py  find_similar_sources.py  find_source_differences.py  flask_server.py  generate_PSC.py  generate_big_data_network.py  generate_data_network.py  notification_listener.py  notification_listener_old.py  pan-meta-db.sql  plot_lightcurve.py  process-image.py  run_pipe.py  run_pipe_2.py
scripts/tests/: mock_storage.py  test_combine_lightcurves.py  test_generate_data_network.py
services/: image.py  pipeline.py
src/panoptes/pipeline/: __init__.py  cli.py  image.py  model.py  observation.py  operations.py  settings.py
src/panoptes/pipeline/cloud/: handler.py
src/panoptes/pipeline/config/: framework.cfg  logger.cfg  pipeline.cfg
src/panoptes/pipeline/operations/: hist_equal2d.py  save_png.py  simple_fits_reader.py
src/panoptes/pipeline/pipes/: main.py
src/panoptes/pipeline/scripts/: cli.py  image.py  observation.py
src/panoptes/pipeline/services/: processing.py
src/panoptes/pipeline/utils/: __init__.py  apertures.py  bigquery.py  cli.py  error.py  metadata.py  plot.py  processing.py  sources.py  status.py
temp/: PSC_0002.fits  PSC_0002.json
tests/: conftest.py  test_piaa.py
webpage/: app.yaml  home.py  index.html
webpage/stylesheets/: main.css
(+32 files in other folders)
