[aliases]
test=pytest

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[metadata]
author = PANOPTES Team
author_email = info@projectpanoptes.org
description = Finding exoplanets with small digital cameras
edit_on_github = True
github_project = panoptes/PIAA
keywords = Citizen-science open-source exoplanet digital dslr camera
license = MIT
long_description = PIAA: PANOPTES Image Analysis Algorithm
package_name = piaa
url = http://panoptes.github.io
