[aliases]
test=pytest

[bdist_wheel]
universal = 1

[sphinx-apidocs]
packages =
    panoptes-piaa

[tool:pytest]
testpaths= panoptes/piaa/tests
python_files= test_*.py
norecursedirs= scripts
addopts= --doctest-modules
doctest_optionflags= ELLIPSIS NORMALIZE_WHITESPACE ALLOW_UNICODE IGNORE_EXCEPTION_DETAIL
filterwarnings =
    ignore:elementwise == comparison failed:DeprecationWarning

[metadata]
author = PANOPTES Team
author_email = info@projectpanoptes.org
description = PANOPTES Image Analysis Algorithm
edit_on_github = True
github_project = panoptes/PIAA
keywords = exoplanet digital dslr camera utilities astronomy
license = MIT
long_description = The image processing algorithms related to the PANOPTES project.
package_name = panoptes-piaa
url = http://github.com/panoptes/piaa
